feat: store database source information
connection string encrypted with aes
